--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+0.6.0:
+Fix logging to console when background thread is configured without a filename.
+
 0.5.0:
 Some fixes and optimizations.
 Add AST optimizer.
