--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+0.9.0:
+Add requirements.txt.
+Reduce pep8 findings.
+Several bugfixes.
+
 0.6.0:
 Fix logging to console when background thread is configured without a filename.
 
