--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,11 @@
+0.9.2:
+LogInit: Add 2 new optional arguments stdout and stderr for configuring custom file objects
+         for print statments.
+OptimizeAst: Also optimize code blocks after if-statements.
+
 0.9.1:
-GetLogger: If logger domain already exists do not try to remove domain twice from global domains dict.
+GetLogger: If logger domain already exists do not try to remove domain twice from global
+           domains dict.
 
 0.9.0:
 Add requirements.txt.
