--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+0.9.6:
+When calling flush then really write all pending log entries.
+
 0.9.5:
 Fix writing to log file when parameter maxSize is non zero.
 Fix writing to log file when parameter pathName just contains a file name.
