--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+1.2.0:
+Remove colors ORANGE and DARKORANGE and update log colors.
+Add example for consoleLock.
+Update benchmarks.
+
 1.1.0:
 Updates for latest changes in setuptools and Cython.
 
